# MPA

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/include/trajecgenerator/: addCSplineTrajecHandler.h  addCSplineTrajecHandlerRequest.h  addCSplineTrajecHandlerResponse.h  addCircleTrajecHandler.h  addCircleTrajecHandlerRequest.h  addCircleTrajecHandlerResponse.h  addCrSplineTrajecHandler.h  addCrSplineTrajecHandlerRequest.h  addCrSplineTrajecHandlerResponse.h  boolRequest.h  boolRequestRequest.h  boolRequestResponse.h  c_trajec.h  c_trajec_vector.h  float32Request.h  float32RequestRequest.h  float32RequestResponse.h  plotTrajecXoY.h  plotTrajecXoYRequest.h  plotTrajecXoYResponse.h  plotTrajectory.h  plotTrajectoryRequest.h  plotTrajectoryResponse.h  removeTrajecHandler.h  removeTrajecHandlerRequest.h  removeTrajecHandlerResponse.h
devel/lib/data_logger/: data_logger
devel/lib/pkgconfig/: data_logger.pc  ros_bridge_server.pc  rviz_msg_transformer.pc  trajecgenerator.pc
devel/lib/python3/dist-packages/trajecgenerator/msg/: __init__.py  _c_trajec.py  _c_trajec_vector.py
devel/lib/python3/dist-packages/trajecgenerator/srv/: __init__.py  _addCSplineTrajecHandler.py  _addCircleTrajecHandler.py  _addCrSplineTrajecHandler.py  _boolRequest.py  _float32Request.py  _plotTrajecXoY.py  _plotTrajectory.py  _removeTrajecHandler.py
devel/lib/ros_bridge_server/: ros_bridge_server
devel/lib/rviz_msg_transformer/: rviz_msg_transformer
devel/lib/trajecgenerator/: trajecgenerator_node
devel/share/common-lisp/ros/trajecgenerator/msg/: _package.lisp  _package_c_trajec.lisp  _package_c_trajec_vector.lisp  c_trajec.lisp  c_trajec_vector.lisp  trajecgenerator-msg.asd
devel/share/common-lisp/ros/trajecgenerator/srv/: _package.lisp  _package_addCSplineTrajecHandler.lisp  _package_addCircleTrajecHandler.lisp  _package_addCrSplineTrajecHandler.lisp  _package_boolRequest.lisp  _package_float32Request.lisp  _package_plotTrajecXoY.lisp  _package_plotTrajectory.lisp  _package_removeTrajecHandler.lisp  addCSplineTrajecHandler.lisp  addCircleTrajecHandler.lisp  addCrSplineTrajecHandler.lisp  boolRequest.lisp  float32Request.lisp  plotTrajecXoY.lisp  plotTrajectory.lisp  removeTrajecHandler.lisp  trajecgenerator-srv.asd
devel/share/data_logger/cmake/: data_loggerConfig.cmake
devel/share/gennodejs/ros/trajecgenerator/msg/: _index.js  c_trajec.js  c_trajec_vector.js
devel/share/gennodejs/ros/trajecgenerator/srv/: _index.js  addCSplineTrajecHandler.js  addCircleTrajecHandler.js  addCrSplineTrajecHandler.js  boolRequest.js  float32Request.js  plotTrajecXoY.js  plotTrajectory.js  removeTrajecHandler.js
devel/share/ros_bridge_server/cmake/: ros_bridge_serverConfig.cmake
devel/share/roseus/ros/trajecgenerator/: manifest.l
devel/share/roseus/ros/trajecgenerator/msg/: c_trajec.l  c_trajec_vector.l
devel/share/roseus/ros/trajecgenerator/srv/: addCSplineTrajecHandler.l  addCircleTrajecHandler.l  addCrSplineTrajecHandler.l  boolRequest.l  float32Request.l  plotTrajecXoY.l  plotTrajectory.l  removeTrajecHandler.l
devel/share/rviz_msg_transformer/cmake/: rviz_msg_transformerConfig.cmake
devel/share/trajecgenerator/cmake/: trajecgenerator-msg-extras.cmake  trajecgenerator-msg-paths.cmake  trajecgeneratorConfig.cmake
src/data_logger/: CMakeLists.txt
src/data_logger/src/: data_logger.cpp
src/ros_bridge_server/: CMakeLists.txt  package.xml
src/ros_bridge_server/include/ros_bridge_server/: CommunicationHandler.h  Publisher.h  RosMsgs.h  Socket.h  Subscriber.h  msg_id.h
src/ros_bridge_server/src/: CommunicationHandler.cpp  RosMsgs.cpp  Socket.cpp  ros_bridge_server.cpp
src/rviz_msg_transformer/: CMakeLists.txt
src/rviz_msg_transformer/rviz/: rviz_config.rviz
src/rviz_msg_transformer/src/: rviz_msg_transformer.cpp
src/trajecgenerator/: .package.xml.swp  CMakeLists.txt
src/trajecgenerator/msg/: c_trajec.msg  c_trajec_vector.msg
src/trajecgenerator/src/: circletrajectory.cpp  circletrajectory.h  crsplinetrajectory.cpp  crsplinetrajectory.h  csplinetrajectory.cpp  csplinetrajectory.h  main.cpp  pos_d.h  spline.cpp  spline.h  test.cpp  trajechandler.cpp  trajechandler.h  trajecmaster.cpp  trajecmaster.h  trajectorobot.cpp  trajectorobot.h  trajectory.cpp  trajectory.h
src/trajecgenerator/srv/: addCSplineTrajecHandler.srv  addCircleTrajecHandler.srv  addCrSplineTrajecHandler.srv  boolRequest.srv  float32Request.srv  plotTrajecXoY.srv  plotTrajectory.srv
